Improve HTML page layout, front-page and publications list.

--- a/doc/CMSSW.mdwn
+++ b/doc/CMSSW.mdwn
@@ -1,6 +1,11 @@
 ---
 title: IgProf in CMSSW
 layout: default
+related:
+ - { name: Top, link: . }
+ - { name: Downloads, link: http://sourceforge.net/projects/igprof/files/ }
+ - { name: Bugs, link: http://sourceforge.net/tracker/?group_id=300286&atid=1266520 }
+ - { name: Project, link: http://sourceforge.net/projects/igprof/ }
 ---
 ### How to use IgProf in CMSSW
 
