--- a/doc/authors.mdwn
+++ b/doc/authors.mdwn
@@ -1,6 +1,11 @@
 ---
 title: We did it!
 layout: default
+related:
+ - { name: Top, link: . }
+ - { name: Downloads, link: http://sourceforge.net/projects/igprof/files/ }
+ - { name: Bugs, link: http://sourceforge.net/tracker/?group_id=300286&atid=1266520 }
+ - { name: Project, link: http://sourceforge.net/projects/igprof/ }
 ---
 IgProf was developed by Lassi Tuura and Giulio Eulisse in order to assist
 software development projects for the [CMS experiment][cms] at [CERN][].
