--- a/doc/dump-format.mdwn
+++ b/doc/dump-format.mdwn
@@ -1,6 +1,11 @@
 ---
 title: IgProf profile dump format
 layout: default
+related:
+ - { name: Top, link: . }
+ - { name: Downloads, link: http://sourceforge.net/projects/igprof/files/ }
+ - { name: Bugs, link: http://sourceforge.net/tracker/?group_id=300286&atid=1266520 }
+ - { name: Project, link: http://sourceforge.net/projects/igprof/ }
 ---
 The IgProf output is a simple text file, possibly gzip / bzip2 compressed. The
 first few lines of the output look like this:
