--- a/doc/ighook.mdwn
+++ b/doc/ighook.mdwn
@@ -1,6 +1,11 @@
 ---
 title: IgHook
 layout: default
+related:
+ - { name: Top, link: . }
+ - { name: Downloads, link: http://sourceforge.net/projects/igprof/files/ }
+ - { name: Bugs, link: http://sourceforge.net/tracker/?group_id=300286&atid=1266520 }
+ - { name: Project, link: http://sourceforge.net/projects/igprof/ }
 ---
 IgHook is a dynamic instrumentation library written by Lassi Tuura.  It
 provides functionality to tap into any routine in an existing programme or
