--- a/doc/running.mdwn
+++ b/doc/running.mdwn
@@ -1,6 +1,11 @@
 ---
 title: Running IgProf
 layout: default
+related:
+ - { name: Top, link: . }
+ - { name: Downloads, link: http://sourceforge.net/projects/igprof/files/ }
+ - { name: Bugs, link: http://sourceforge.net/tracker/?group_id=300286&atid=1266520 }
+ - { name: Project, link: http://sourceforge.net/projects/igprof/ }
 ---
 
 ### Profile software
