--- a/doc/index.mdwn
+++ b/doc/index.mdwn
@@ -36,6 +36,8 @@ Usually IgProf is considerably faster than valgrind or callgrind for the job.
 
 * P. Elmer, G. Eulisse, L. Tuura, V. Innocente: _CMS software performance strategies,_ Proc. Computing In High Energy And Nuclear Physics ([CHEP09](http://www.particle.cz/conferences/chep2009/)), Prague, Czech Republic, 2009 ([slides](http://indico.cern.ch/getFile.py/access?contribId=482&sessionId=59&resId=0&materialId=slides&confId=35523)).
 
+* G. Benelli: _The CMS software performance at the start of data taking_, Nuclear Science Symposium Conference Record ([NSS '08](http://www.nss-mic.org/2008/)), 2008, [doi:10.1109/NSSMIC.2008.4774926](http://dx.doi.org/10.1109/NSSMIC.2008.4774926) ([paper](http://ieeexplore.ieee.org/iel5/4747668/4774073/04774926.pdf?arnumber=4774926), [slides](http://www-zeuthen.desy.de/technisches_seminar/texte/cms_software_performance_2008.pdf)).
+
 * L. Tuura, V. Innocente, G. Eulisse: _Analysing CMS software performance using IgProf, OProfile and callgrind,_ Proc. Computing In High Energy And Nuclear Physics ([CHEP07](http://www.chep2007.com/)), Victoria, Canada, 2007, [doi:10.1088/1742-6596/119/4/042030](http://dx.doi.org/10.1088/1742-6596/119/4/042030) ([paper](http://www.iop.org/EJ/article/1742-6596/119/4/042030/jpconf8_119_042030.pdf), [slides](http://indico.cern.ch/getFile.py/access?contribId=259&sessionId=28&resId=0&materialId=slides&confId=3580)).
 
 * G. Eulisse, L. Tuura: _IgProf profiling tool,_ Proc. Computing In High Energy And Nuclear Physics ([CHEP 2004](http://www.chep2004.org/)), Interlaken, Switzerland, 2004 ([paper](http://indico.cern.ch/getFile.py/access?contribId=63&sessionId=6&resId=0&materialId=paper&confId=0), [slides](http://indico.cern.ch/getFile.py/access?contribId=63&sessionId=6&resId=0&materialId=slides&confId=0), [abstract](http://indico.cern.ch/contributionDisplay.py?contribId=63&sessionId=6&confId=0)).
