--- a/doc/install.mdwn
+++ b/doc/install.mdwn
@@ -25,13 +25,14 @@ verified this.
 
 The build recipe is:
 
-    # Set up one environment variable to simplify the build recipe
-    export INSTAREA=/x/y/z   # Wherever you want to install the software
+    # Set up one environment variable to simplify the build recipe;
+    # no need to 'export' this, it's just a shortcut for path names.
+    INSTAREA=/x/y/z   # Wherever you want to install the software
 
     # Get the source tarballs for libatomic_ops, libunwind and igprof
     wget http://www.hpl.hp.com/research/linux/atomic_ops/download/libatomic_ops-7.2alpha4.tar.gz
-    wget -O libunwind.tar.gz "http://git.savannah.gnu.org/gitweb/?p=libunwind.git;a=snapshot;h=5c2cade264010c9855c4ea5effc5b4789739e7ca;sf=tgz"
-    wget http://downloads.sourceforge.net/igprof/igprof-5.9.1.tar.gz
+    wget http://download.savannah.gnu.org/releases/libunwind/libunwind-1.0.1.tar.gz
+    wget http://downloads.sourceforge.net/igprof/igprof-5.9.3.tar.gz
 
     # Get a recent version of cmake
     wget http://www.cmake.org/files/v2.8/cmake-2.8.1.tar.gz
@@ -44,9 +45,8 @@ The build recipe is:
     cd ../
 
     # Build libunwind
-    gtar xzf libunwind.tar.gz
-    cd libunwind-5c2cade
-    autoreconf -i
+    gtar xzf libunwind-1.0.1.tar.gz
+    cd libunwind-1.0.1
     ./configure CPPFLAGS="-I$INSTAREA/include" CFLAGS="-g -O3" --prefix=$INSTAREA --disable-block-signals
     make -j 10 install
     cd ../
@@ -62,8 +62,8 @@ The build recipe is:
     export PATH=$INSTAREA/tmpcmake/bin:$PATH
 
     # Build igprof
-    gtar xzf igprof-5.9.1.tar.gz
-    cd igprof-5.9.1
+    gtar xzf igprof-5.9.3.tar.gz
+    cd igprof-5.9.3
     cmake -DCMAKE_INSTALL_PREFIX=$INSTAREA -DCMAKE_CXX_FLAGS_RELWITHDEBINFO="-g -O3" .
     make -j 10
     make -j 10 install
