--- a/index.mdwn
+++ b/index.mdwn
@@ -4,8 +4,8 @@ layout: default
 related:
  - { name: Top, link: . }
  - { name: Downloads, link: http://sourceforge.net/projects/igprof/files/ }
- - { name: Bugs, link: http://sourceforge.net/tracker/?group_id=300286&atid=1266520 }
- - { name: Project, link: http://sourceforge.net/projects/igprof/ }
+ - { name: Bugs, link: https://github.com/ktf/igprof/issues }
+ - { name: Project, link: https://github.com/ktf/igprof }
 ---
 Welcome to IgProf, the Ignominous Profiler.  IgProf is a simple nice tool for
 measuring and analysing application memory and performance characteristics.
