Point all the links to github.

--- a/dump-format.mdwn
+++ b/dump-format.mdwn
@@ -3,9 +3,9 @@ title: IgProf profile dump format
 layout: default
 related:
  - { name: Top, link: . }
- - { name: Downloads, link: http://sourceforge.net/projects/igprof/files/ }
- - { name: Bugs, link: http://sourceforge.net/tracker/?group_id=300286&atid=1266520 }
- - { name: Project, link: http://sourceforge.net/projects/igprof/ }
+ - { name: Downloads, link: https://github.com/ktf/igprof/tags }
+ - { name: Bugs, link: https://github.com/ktf/igprof/issues }
+ - { name: Project, link: https://github.com/ktf/igprof/ }
 ---
 The IgProf output is a simple text file, possibly gzip / bzip2 compressed. The
 first few lines of the output look like this:
