--- a/analysis.mdwn
+++ b/analysis.mdwn
@@ -3,9 +3,9 @@ title: Producing IgProf profile reports
 layout: default
 related:
  - { name: Top, link: . }
- - { name: Downloads, link: http://sourceforge.net/projects/igprof/files/ }
- - { name: Bugs, link: http://sourceforge.net/tracker/?group_id=300286&atid=1266520 }
- - { name: Project, link: http://sourceforge.net/projects/igprof/ }
+ - { name: Downloads, link: https://github.com/ktf/igprof/tags }
+ - { name: Bugs, link: https://github.com/ktf/igprof/issues }
+ - { name: Project, link: https://github.com/ktf/igprof/ }
 ---
 Assuming you obtained some profile statistics files [as shown on the running
 page](running.html), the next step is to process these to obtain useful
