--- a/authors.mdwn
+++ b/authors.mdwn
@@ -3,9 +3,9 @@ title: We did it!
 layout: default
 related:
  - { name: Top, link: . }
- - { name: Downloads, link: http://sourceforge.net/projects/igprof/files/ }
- - { name: Bugs, link: http://sourceforge.net/tracker/?group_id=300286&atid=1266520 }
- - { name: Project, link: http://sourceforge.net/projects/igprof/ }
+ - { name: Downloads, link: https://github.com/ktf/igprof/tags }
+ - { name: Bugs, link: https://github.com/ktf/igprof/issues }
+ - { name: Project, link: https://github.com/ktf/igprof/ }
 ---
 IgProf was developed by Lassi Tuura and Giulio Eulisse in order to assist
 software development projects for the [CMS experiment][cms] at [CERN][].
