--- a/authors.mdwn
+++ b/authors.mdwn
@@ -7,10 +7,15 @@ related:
  - { name: Bugs, link: https://github.com/ktf/igprof/issues }
  - { name: Project, link: https://github.com/ktf/igprof/ }
 ---
-IgProf was developed by Lassi Tuura and Giulio Eulisse in order to assist
-software development projects for the [CMS experiment][cms] at [CERN][].
+IgProf was developed by Lassi Tuura, Giulio Eulisse and Mikko Kurkela in order
+to assist software development projects for the [CMS experiment][cms] at
+[CERN][].
 
-The authors can be reached at `first.last@cern.ch` e-mail addresses.
+A number of people have contributed valuable feedback and help with the project
+planning over the years, in particular Vincenzo Innocente, Lucas Taylor, Peter
+Elmer.
+
+The authors can be reached at [igprof-developers@googlegroups.com][igprof-developers].
 
 The development was funded by the United States [National Science
 Foundation][nsf] and [Department of Energy][doe].
@@ -19,3 +24,4 @@ Foundation][nsf] and [Department of Energy][doe].
 [CERN]: http://www.cern.ch
 [nsf]: http://nsf.gov
 [doe]: http://www.energy.gov
+[igprof-developers]: mailto:igprof-developers@googlegroups.com
