--- a/doc/install.mdwn
+++ b/doc/install.mdwn
@@ -3,13 +3,13 @@ title: Installing IgProf
 layout: default
 related:
  - { name: Top, link: . }
- - { name: Downloads, link: http://sourceforge.net/projects/igprof/files/ }
- - { name: Bugs, link: http://sourceforge.net/tracker/?group_id=300286&atid=1266520 }
- - { name: Project, link: http://sourceforge.net/projects/igprof/ }
+ - { name: Downloads, link: https://github.com/ktf/igprof/tags }
+ - { name: Bugs, link: https://github.com/ktf/igprof/issues }
+ - { name: Project, link: https://github.com/ktf/igprof/ }
 ---
 
-Building igprof requires recent libatomic_ops and libunwind, plus recent
-autotools and cmake 2.8.x or later for the build itself, but not running.
+Building igprof requires recent [libatomic_ops][] and [libunwind][], plus recent
+[autotools][] and [cmake][] 2.8.x or later for the build itself, but not running.
 The recipe below includes a temporary build of cmake, but if your system
 supplies it, you can safely omit building cmake.
 
@@ -21,7 +21,7 @@ verified this.
  * [Scientific Linux 5](https://www.scientificlinux.org/) - a RHEL5 rebuild
    * 32 bit and 64bit, with gcc 4.1.2 system compiler
    * 32 bit and 64bit, with gcc 4.3.4 compiler
-   * 64bit, with gcc 4.5.1 compiler
+   * 64bit, with gcc 4.5.1, 4.6.x and 4.7.x, compiler
 
 The build recipe is:
 
@@ -32,7 +32,7 @@ The build recipe is:
     # Get the source tarballs for libatomic_ops, libunwind and igprof
     wget http://www.hpl.hp.com/research/linux/atomic_ops/download/libatomic_ops-7.2alpha4.tar.gz
     wget http://download.savannah.gnu.org/releases/libunwind/libunwind-1.0.1.tar.gz
-    wget http://downloads.sourceforge.net/igprof/igprof-5.9.3.tar.gz
+    wget -Oigprof-5.9.6.tar.gz https://github.com/ktf/igprof/archive/v5.9.6.tar.gz
 
     # Get a recent version of cmake
     wget http://www.cmake.org/files/v2.8/cmake-2.8.1.tar.gz
@@ -62,8 +62,8 @@ The build recipe is:
     export PATH=$INSTAREA/tmpcmake/bin:$PATH
 
     # Build igprof
-    gtar xzf igprof-5.9.3.tar.gz
-    cd igprof-5.9.3
+    gtar xzf igprof-5.9.6.tar.gz
+    cd igprof-5.9.6
     cmake -DCMAKE_INSTALL_PREFIX=$INSTAREA -DCMAKE_CXX_FLAGS_RELWITHDEBINFO="-g -O3" .
     make -j 10
     make -j 10 install
@@ -72,8 +72,8 @@ The build recipe is:
     # Clean up the temporary cmake build
     rm -fR $INSTAREA/tmpcmake
 
-At this point should be able to set up PATH and LD_LIBRARY_PATH to point to
-the $INSTAREA and begin to use igprof. Here is a simple example (used as a
+At this point should be able to set up `PATH` and `LD_LIBRARY_PATH` to point to
+the `$INSTAREA` and begin to use igprof. Here is a simple example (used as a
 tutorial to demonstrate problems) which you can use quickly to verify that
 igprof is set up:
 
@@ -134,3 +134,8 @@ If you then look at vvvibc.res, you should see something like:
 
 If you have gotten to this point, your igprof installation should be set up
 correctly and you should proceed to the full documentation of [how to run igprof](running.html).
+
+[libatomic_ops]: http://www.hpl.hp.com/research/linux/atomic_ops/
+[libunwind]: http://www.nongnu.org/libunwind/
+[autotools]: http://www.gnu.org/savannah-checkouts/gnu/automake/manual/html_node/Autotools-Introduction.html
+[cmake]: http://www.cmake.org
